docs: fix styles and add codeblock titles

--- a/apps/docs/src/app/examples/canvas/page.mdx
+++ b/apps/docs/src/app/examples/canvas/page.mdx
@@ -10,19 +10,22 @@ import canvasTreeView from "../../../../../../templates/Canvas/TreeView?raw";
 import canvasUtils from "../../../../../../templates/Canvas/utils?raw";
 import { CodeBlock } from "../../../components/code/CodeBlock";
 
-<div className="mt-20">
-  <CodeBlock
-    code={{
-      main: canvasMain,
-      "./utils": canvasUtils,
-      "./styles": canvasStyles,
-      "./Context": canvasContext,
-      "./ListView": canvasListView,
-      "./Node": canvasNode,
-      "./Sidebar": canvasSidebar,
-      "./StatusEdge": canvasStatusEdge,
-      "./Table": canvasTable,
-      "./TreeView": canvasTreeView,
-    }}
-  />
-</div>
+### Canvas
+
+A visual canvas interface for building and executing data flows. Ideal for ETL tools, automation pipelines, and visual programming use cases.  
+Drag nodes from the sidebar, drop them onto the canvas, and connect them to define your logic.
+
+<CodeBlock
+  code={{
+    main: canvasMain,
+    "./utils": canvasUtils,
+    "./styles": canvasStyles,
+    "./Context": canvasContext,
+    "./ListView": canvasListView,
+    "./Node": canvasNode,
+    "./Sidebar": canvasSidebar,
+    "./StatusEdge": canvasStatusEdge,
+    "./Table": canvasTable,
+    "./TreeView": canvasTreeView,
+  }}
+/>
