--- a/apps/docs/src/app/examples/inputs/page.mdx
+++ b/apps/docs/src/app/examples/inputs/page.mdx
@@ -7,6 +7,10 @@ import tagsDropdown from "./TagsDropdown?raw";
 import tagsSuggestions from "./TagsSuggestions?raw";
 import tagsSuggestionsEmpty from "./TagsSuggestionsEmpty?raw";
 
+### Input Components
+
+Explore different input types and features—like dropdowns, tags, editable text, and more
+
 <div className="overflow-hidden mt-20">
   <div className="w-101% grid divide-border [grid-template-columns:repeat(auto-fit,minmax(360px,1fr))] -mt-px -mb-px auto-rows-min [&>*]:min-h-[200px]">
     <CodeBlock code={{ main: dropdownPrefix }} layout="popup" />
@@ -14,7 +18,15 @@ import tagsSuggestionsEmpty from "./TagsSuggestionsEmpty?raw";
     <CodeBlock code={{ main: tagsDropdown }} layout="popup" />
     <CodeBlock code={{ main: tagsSuggestions }} layout="popup" />
     <CodeBlock code={{ main: tagsSuggestionsEmpty }} layout="popup" />
-    <CodeBlock code={{ main: editableValue }} layout="popup" />
-    <CodeBlock code={{ main: labelSide }} layout="popup" />
+    <CodeBlock
+      code={{ main: editableValue }}
+      layout="popup"
+      title="Inline Editable Text"
+    />
+    <CodeBlock
+      code={{ main: labelSide }}
+      layout="popup"
+      title="Label left side"
+    />
   </div>
 </div>
