--- a/apps/docs/src/app/examples/kpis/page.mdx
+++ b/apps/docs/src/app/examples/kpis/page.mdx
@@ -4,8 +4,24 @@ import dataLoading from "./DataLoading?raw";
 import selectable from "./Selectable?raw";
 import semantic from "./Semantic?raw";
 
-<div className="mt-20">
-  <CodeBlock layout="expandable" code={semantic} />
-  <CodeBlock layout="expandable" code={selectable} />
-  <CodeBlock layout="expandable" code={dataLoading} />
-</div>
+### KPI Cards
+
+Discover various KPI card layouts and features to highlight important metrics in your UI.
+
+### Color Variants
+
+Showcase of KPI cards with different border colors to indicate status or category.
+
+<CodeBlock layout="expandable" code={semantic} />
+
+### Selectable Cards
+
+KPI cards with radio selection support—ideal for interactive dashboards or comparisons.
+
+<CodeBlock layout="expandable" code={selectable} />
+
+### Dynamic KPI Value
+
+Live KPI card that fetches and displays data based on a selected endpoint, including fallback/error handling.
+
+<CodeBlock layout="expandable" code={dataLoading} />
