--- a/apps/docs/src/app/examples/login/page.mdx
+++ b/apps/docs/src/app/examples/login/page.mdx
@@ -3,10 +3,14 @@ import { CodeBlock } from "../../../components/code/CodeBlock";
 import loginFull from "./LoginFull?raw";
 import loginShort from "./LoginShort?raw";
 
-## Wide layout
+### Wide Layout
+
+A two-column layout that pairs branding with the login form—ideal for enterprise or marketing-driven applications.
 
 <CodeBlock code={loginFull} />
 
-## Centered layout
+### Centered Layout
+
+A centered, compact login screen—simple, focused, and suited for apps with minimal distractions.
 
 <CodeBlock code={loginShort} />
