--- a/apps/docs/src/content/docs/icons.mdx
+++ b/apps/docs/src/content/docs/icons.mdx
@@ -30,9 +30,11 @@ export default function Demo() {
 Given a `<CustomIcon />` SVG React component, usage would look like this:
 
 ```tsx
-<HvButton startIcon={<CustomIcon />} />
-<HvInput endAdornment={<CustomIcon />} />
-<HvCardHeader icon={<CustomIcon />} />
+<div>
+  <HvButton startIcon={<CustomIcon />} />
+  <HvInput endAdornment={<CustomIcon />} />
+  <HvCardHeader icon={<CustomIcon />} />
+</div>
 ```
 
 ## `HvIconContainer`
