--- a/packages/lab/src/Flow/stories/Usage.mdx
+++ b/packages/lab/src/Flow/stories/Usage.mdx
@@ -68,7 +68,7 @@ interface HvFlowGroupItem {
 
 Example:
 
-```typescript
+```tsx
 const nodeGroups = {
   assets: {
     label: "Assets",
@@ -268,7 +268,7 @@ type HvFlowNodeParam =
 Whenever a change is made on a parameter while using the flow, that change is saved on the node's `data` property in the `reactflow` instance.
 It's saved in the form of:
 
-```typescript
+```
 data: {
   [parameterId]: [parameterValue]
 }
