refactor!: rename `DropDownMenu` component to `DropdownMenu

--- a/apps/docs/src/content/components/canvas-toolbar.mdx
+++ b/apps/docs/src/content/components/canvas-toolbar.mdx
@@ -57,7 +57,7 @@ export default function Demo() {
       <HvButton variant="primary">Save</HvButton>
       <HvButton variant="primaryGhost">Cancel</HvButton>
       <Separator />
-      <HvDropDownMenu
+      <HvDropdownMenu
         placement="right"
         onClick={(e, item) => console.log(item.label)}
         dataList={[
