--- a/apps/docs/src/content/components/global-actions.mdx
+++ b/apps/docs/src/content/components/global-actions.mdx
@@ -2,7 +2,7 @@ import { Callout } from "nextra/components";
 import {
   globalActionsClasses as classes,
   HvButton,
-  HvDropDownMenu,
+  HvDropdownMenu,
   HvGlobalActions,
   HvIconButton,
 } from "@hitachivantara/uikit-react-core";
@@ -30,7 +30,7 @@ import { Header } from "../../components/Header";
 >
   <HvButton variant="primary">Save</HvButton>
   <HvButton variant="secondarySubtle">Reset</HvButton>
-  <HvDropDownMenu
+  <HvDropdownMenu
     placement="left"
     dataList={[
       { label: "Action 1" },
@@ -68,7 +68,7 @@ The content of the Global Actions can be customized. This is useful when you wan
   }
 >
   <HvButton variant="secondaryGhost">Action</HvButton>
-  <HvDropDownMenu
+  <HvDropdownMenu
     placement="left"
     dataList={[
       { label: "Action 2" },
