--- a/apps/docs/src/content/components/button.mdx
+++ b/apps/docs/src/content/components/button.mdx
@@ -104,7 +104,7 @@ interface MyLinkProps extends HvButtonProps<"a"> {
 If you need a button that exists on a semantic container you can set the `variant` prop to `semantic`.
 
 ```tsx live
-<div className="flex flex-wrap gap-sm p-sm text-base_dark bg-neutral_20">
+<div className="flex flex-wrap gap-sm p-sm text-textDark bg-infoDimmed">
   <HvButton variant="semantic" startIcon={<Favorite />}>
     Favorite
   </HvButton>
