--- a/apps/docs/src/content/components/tooltip.mdx
+++ b/apps/docs/src/content/components/tooltip.mdx
@@ -110,7 +110,7 @@ Since it labels the target element and isn’t keyboard-navigable, avoid complex
     title={
       <div className={"flex flex-col gap-xs"}>
         <HvTypography variant="label">January</HvTypography>
-        <div className="border-b-3px border-atmo2 m-xs -mx-sm" />
+        <div className="border-b-3px border-bgPage m-xs -mx-sm" />
         {[
           ["Sales", "52,000 units"],
           ["Profit", "50%"],
