--- a/apps/docs/src/content/components/tree-view.mdx
+++ b/apps/docs/src/content/components/tree-view.mdx
@@ -331,7 +331,7 @@ const NavigationItem = forwardRef<HTMLLIElement, CustomTreeItemProps>(
           group: "ml-0",
           content:
             "pl-[calc(var(--uikit-space-sm)*var(--level))] border-l-4px border-transparent",
-          selected: "border-l-primary bg-primary_20",
+          selected: "border-l-primary bg-primaryDimmed",
         }}
         icon="" // remove left nav icon
         label={
