--- a/apps/docs/src/content/docs/styling.mdx
+++ b/apps/docs/src/content/docs/styling.mdx
@@ -197,7 +197,7 @@ The utility classes integrate with the Design System theme for colors and sizing
 "p-sm"; // padding `sm` (16px)
 "pb-sm"; // padding bottom `sm` (16px)
 "my-md"; // margin-y (top+bottom) `md` (24px)
-"bg-warning"; // background color of `atmo3`
+"bg-warning"; // background color of `warning`
 ```
 
 ##### Sizes and colors
