--- a/apps/docs/src/content/docs/theming.mdx
+++ b/apps/docs/src/content/docs/theming.mdx
@@ -108,7 +108,7 @@ const CssVariables = () => {
   return (
     <HvTypography
       style={{
-        color: theme.colors.neutral, // resolves to var(--uikit-colors-neutral)
+        color: theme.colors.info, // resolves to var(--uikit-colors-info)
         fontWeight: theme.fontWeights.semibold, // resolves to var(--uikit-fontWeights-semibold)
         fontSize: theme.fontSizes.lg, // resolves to var(--uikit-fontSizes-lg)
       }}
