--- a/apps/docs/src/content/components/blade.mdx
+++ b/apps/docs/src/content/components/blade.mdx
@@ -47,9 +47,9 @@ The blade can have any content as its `label` or `children`.
   }
 >
   <div className="p-xs flex items-center gap-xs">
-    <HvTag label="Tag 1" color="positive_20" />
-    <HvTag label="Tag 2" color="neutral_20" />
-    <HvTag label="Tag 3" color="warning_20" />
+    <HvTag label="Tag 1" color="positiveDimmed" />
+    <HvTag label="Tag 2" color="infoDimmed" />
+    <HvTag label="Tag 3" color="warningDimmed" />
   </div>
 </HvBlade>
 ```
