--- a/apps/docs/src/content/docs/theming.mdx
+++ b/apps/docs/src/content/docs/theming.mdx
@@ -11,12 +11,12 @@ The **theme** object serves as the **UI Kit** foundation, defining all styling s
 **UI Kit** includes three default themes, each available in two color modes: **dawn** (light) and **wicked** (dark):
 
 - **ds5** — aligned with the [Next Design System](https://designsystem.hitachi.com)
-- **pentahoPlus** — aligned with the Pentaho Design System
+- **pentaho** — aligned with the Pentaho Design System
 
 Use the `HvProvider` to configure the active theme and color mode:
 
 ```tsx
-<HvProvider themes={[pentahoPlus]} theme="pentahoPlus" colorMode="dawn">
+<HvProvider themes={[pentaho]} theme="pentaho" colorMode="dawn">
   <App />
 </HvProvider>
 ```
@@ -36,7 +36,7 @@ Use `createTheme()` to define a custom theme based on existing ones. This allows
 ```tsx
 const myTheme = createTheme({
   name: "myTheme",
-  base: "pentahoPlus",
+  base: "pentaho",
   inheritColorModes: false,
   colors: {
     modes: {
