feat(Switch): update to PD 0.7 specs

--- a/apps/docs/src/content/components/switch.mdx
+++ b/apps/docs/src/content/components/switch.mdx
@@ -11,6 +11,7 @@ import { Header } from "../../components/Header";
   componentName="HvSwitch"
   controls={{
     label: { type: "text", defaultValue: "Switch" },
+    size: { type: "select", defaultValue: "small" },
     required: { defaultValue: false },
     readOnly: { defaultValue: false },
     disabled: { defaultValue: false },
@@ -103,6 +104,10 @@ export default function Demo() {
   );
 }
 ```
+
+> [!NOTE]
+>
+> For more switch examples, check out our [examples page](/examples/switches)
 
 ### Related components
 
