--- a/apps/docs/src/content/docs/theming.mdx
+++ b/apps/docs/src/content/docs/theming.mdx
@@ -16,14 +16,14 @@ The **theme** object serves as the **UI Kit** foundation, defining all styling s
 Use the `HvProvider` to configure the active theme and color mode:
 
 ```tsx
-<HvProvider themes={[pentaho]} theme="pentaho" colorMode="dawn">
+<HvProvider themes={[pentaho]} theme="pentaho" colorMode="light">
   <App />
 </HvProvider>
 ```
 
 - If `themes` is not provided, the default is `ds5`.
 - If only one theme is provided, `theme` can be omitted.
-- If `colorMode` is omitted, `dawn` is used by default.
+- If `colorMode` is omitted, `light` is used by default.
 
 ## Creating a New Theme
 
@@ -83,7 +83,7 @@ const MyComponent = () => {
       icon
       variant="secondaryGhost"
       onClick={() => {
-        changeMode(selectedMode === "dawn" ? "wicked" : "dawn");
+        changeMode(selectedMode === "light" ? "dark" : "light");
       }}
     >
       <ThemeSwitcher />
