chore(Provider): remove multi-theme support (#4849)
* chore(Provider): replace selectedTheme with activeTheme.name
* chore(Provider): remove multi-theme support

--- a/apps/docs/src/content/docs/theming.mdx
+++ b/apps/docs/src/content/docs/theming.mdx
@@ -64,11 +64,9 @@ Use the `useTheme()` hook to dynamically access or update theme information:
 
 ```tsx
 const {
-  selectedTheme, // Active theme name
   selectedMode, // Active color mode
-  themes, // Available themes
   colorModes, // Modes for the current theme
-  changeTheme, // Function to switch theme or color mode
+  changeMode, // Function to switch color mode
   activeTheme, // The active theme object
   colors, // Active color palette
 } = useTheme();
@@ -80,15 +78,15 @@ Toggle themes or color modes at runtime — ideal for user preferences (e.g. lig
 
 ```tsx
 const MyComponent = () => {
-  const { selectedTheme, selectedMode, changeTheme } = useTheme();
+  const { selectedMode, changeMode } = useTheme();
 
   return (
     <HvButton
       icon
       variant="secondaryGhost"
-      onClick={() =>
-        changeTheme(selectedTheme, selectedMode === "dawn" ? "wicked" : "dawn")
-      }
+      onClick={() => {
+        changeMode(selectedMode === "dawn" ? "wicked" : "dawn");
+      }}
     >
       <ThemeSwitcher />
     </HvButton>
