chore: move `color` logic to the `BaseSwitch` component and fix minor issues

--- a/apps/docs/src/content/components/switch.mdx
+++ b/apps/docs/src/content/components/switch.mdx
@@ -61,7 +61,7 @@ export default function Demo() {
       checked={checked}
       aria-label="Engine Control"
       onChange={(_evt, newChecked) => setChecked(newChecked)}
-      color={checked ? "positive" : "negative"}
+      color={checked ? "warning" : "negative"}
     />
   );
 }
