docs: remove cat colors with suffix

--- a/packages/lab/src/Flow/stories/Usage.mdx
+++ b/packages/lab/src/Flow/stories/Usage.mdx
@@ -72,14 +72,14 @@ Example:
 const nodeGroups = {
   assets: {
     label: "Assets",
-    color: "cat3_80",
+    color: "cat3",
     description: "Find here all the available assets.",
     icon: <Heart />,
     items: [{ nodeType: "asset", label: "Asset" }],
   },
   models: {
     label: "ML Model",
-    color: "cat1_80",
+    color: "cat1",
     description: "Find here all the available models.",
     icon: <Favorite />,
     items: [{ nodeType: "model", label: "ML Model Prediction" }],
