--- a/apps/docs/src/content/components/switch.mdx
+++ b/apps/docs/src/content/components/switch.mdx
@@ -11,6 +11,7 @@ import { Header } from "../../components/Header";
   componentName="HvSwitch"
   controls={{
     label: { type: "text", defaultValue: "Switch" },
+    size: { type: "select", defaultValue: "small" },
     required: { defaultValue: false },
     readOnly: { defaultValue: false },
     disabled: { defaultValue: false },
@@ -60,7 +61,7 @@ export default function Demo() {
       checked={checked}
       aria-label="Engine Control"
       onChange={(_evt, newChecked) => setChecked(newChecked)}
-      color={checked ? "positive" : "negative"}
+      color={checked ? "warning" : "negative"}
     />
   );
 }
@@ -103,6 +104,10 @@ export default function Demo() {
   );
 }
 ```
+
+> [!NOTE]
+>
+> For more switch examples, check out our [examples page](/examples/switches)
 
 ### Related components
 
