docs: add ui kit tokens section

--- a/apps/docs/src/content/docs/theme-tokens.mdx
+++ b/apps/docs/src/content/docs/theme-tokens.mdx
@@ -33,6 +33,10 @@ accessed through the `theme` object.
 When creating a new theme, you can extend any of the supported themes by overriding these tokens (or adding new ones).
 This allows you to customize the UI Kit to fit your brand or application needs while maintaining the core design principles.
 
+> [!NOTE]
+>
+> Check the [Color tokens page](/docs/color-tokens) for more information on how to use color tokens in your components.
+
 Below is a summary of the available token categories:
 
 ## Radii
