chore: remove brand color usage

--- a/apps/docs/src/content/components/app-switcher.mdx
+++ b/apps/docs/src/content/components/app-switcher.mdx
@@ -39,13 +39,13 @@ import { Header } from "../../components/Header";
       },
       {
         name: "No Icon App",
-        color: "brand",
+        color: "primary",
         description: "This is a disabled App without an icon",
         disabled: true,
       },
       {
         name: "No Description App",
-        color: "brand",
+        color: "primary",
       },
     ],
   }}
