--- a/apps/docs/src/content/components/avatar-group.mdx
+++ b/apps/docs/src/content/components/avatar-group.mdx
@@ -49,7 +49,7 @@ By default, when the number of avatars exceeds the `maxVisible` prop, the `HvAva
   maxVisible={3}
   overflowComponent={(overflowCount) => (
     <HvTooltip title={`+${overflowCount}`}>
-      <HvAvatar backgroundColor="brand" color="bgContainer" role="img" />
+      <HvAvatar backgroundColor="primary" color="bgContainer" role="img" />
     </HvTooltip>
   )}
 >
