--- a/apps/docs/src/content/docs/theming.mdx
+++ b/apps/docs/src/content/docs/theming.mdx
@@ -136,7 +136,7 @@ const newTheme = createTheme({
       classes: {
         // 👇 override classes styles
         primarySubtle: {
-          color: theme.colors.brand,
+          color: theme.colors.primary,
         },
       },
     },
