docs: fix incorrect footer pages names on the examples section

--- a/apps/docs/src/app/examples/canvas/page.mdx
+++ b/apps/docs/src/app/examples/canvas/page.mdx
@@ -1,3 +1,7 @@
+---
+title: "Canvas"
+---
+
 import canvasContext from "../../../../../../templates/Canvas/Context?raw";
 import canvasMain from "../../../../../../templates/Canvas/index?raw";
 import canvasListView from "../../../../../../templates/Canvas/ListView?raw";
