--- a/apps/docs/src/app/examples/charts/page.mdx
+++ b/apps/docs/src/app/examples/charts/page.mdx
@@ -1,3 +1,7 @@
+---
+title: "Charts"
+---
+
 import { CodeBlock } from "../../../components/code/CodeBlock";
 import donutChartTotal from "./DonutChartTotal?raw";
 import gaugeChart from "./GaugeChart?raw";
