--- a/apps/docs/src/app/examples/dnd/page.mdx
+++ b/apps/docs/src/app/examples/dnd/page.mdx
@@ -1,3 +1,7 @@
+---
+title: "Drag and Drop"
+---
+
 import { CodeBlock } from "../../../components/code/CodeBlock";
 
 import dndKitMultiple from "./DndKitMultiple?raw";
