--- a/apps/docs/src/app/examples/inputs/page.mdx
+++ b/apps/docs/src/app/examples/inputs/page.mdx
@@ -1,3 +1,7 @@
+---
+title: "Inputs"
+---
+
 import { CodeBlock } from "../../../components/code/CodeBlock";
 import copyButton from "./CopyButton?raw";
 import dropdownPrefix from "./DropdownPrefix?raw";
