--- a/apps/docs/src/app/examples/kpis/page.mdx
+++ b/apps/docs/src/app/examples/kpis/page.mdx
@@ -1,3 +1,7 @@
+---
+title: "KPIs"
+---
+
 import { CodeBlock } from "../../../components/code/CodeBlock";
 
 import dataLoading from "./DataLoading?raw";
