--- a/apps/docs/src/app/examples/login/page.mdx
+++ b/apps/docs/src/app/examples/login/page.mdx
@@ -1,3 +1,7 @@
+---
+title: "Login"
+---
+
 import { CodeBlock } from "../../../components/code/CodeBlock";
 
 import loginFull from "./LoginFull?raw";
