--- a/apps/docs/src/app/examples/switches/page.mdx
+++ b/apps/docs/src/app/examples/switches/page.mdx
@@ -1,3 +1,7 @@
+---
+title: "Switches"
+---
+
 import { CodeBlock } from "../../../components/code/CodeBlock";
 import CustomSwitch from "./CustomSwitch?raw";
 import SwitchWithIcon from "./SwitchWithIcon?raw";
