--- a/apps/docs/src/app/examples/tables/page.mdx
+++ b/apps/docs/src/app/examples/tables/page.mdx
@@ -1,3 +1,7 @@
+---
+title: "Tables"
+---
+
 import { CodeBlock } from "../../../components/code/CodeBlock";
 
 import defaultTableCode from "./DefaultTable?raw";
