docs: add small donuts examples to the KPIs examples page

--- a/apps/docs/src/app/examples/kpis/page.mdx
+++ b/apps/docs/src/app/examples/kpis/page.mdx
@@ -7,6 +7,7 @@ import { CodeBlock } from "../../../components/code/CodeBlock";
 import dataLoading from "./DataLoading?raw";
 import selectable from "./Selectable?raw";
 import semantic from "./Semantic?raw";
+import smallDonut from "./SmallDonut?raw";
 
 ### KPI Cards
 
@@ -29,3 +30,9 @@ KPI cards with radio selection support—ideal for interactive dashboards or com
 Live KPI card that fetches and displays data based on a selected endpoint, including fallback/error handling.
 
 <CodeBlock layout="expandable" code={dataLoading} />
+
+### Small Donut KPI
+
+Small custom donut indicators for displaying percentage values, useful for compact KPI displays. No charts used, just SVG circles.
+
+<CodeBlock layout="expandable" code={smallDonut} />
